Implement functions for interacting with the db

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 # Deployed apps should consider commenting these lines out:
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 node_modules/
+.DS_Store
+remote.DS_Store
 
 # mongo database directory
 mongo/
